Fix menu button spacing (#31)

--- a/style.css
+++ b/style.css
@@ -85,7 +85,7 @@ html, body {
 }
 
 #menu li {
-    margin: 10px 0;
+    margin: 0;
 }
 
 #menu a {
@@ -94,6 +94,8 @@ html, body {
     border: 1px solid #333;
     padding: 10px 20px;
     border-radius: 5px;
+    display: block;
+    margin: 10px 0;
 }
 
 #menu a:hover {
